# Bank_db_management

./: .gitignore  CMakeLists.txt  README.md
forms/: mainWindow.ui
includes/bankManagment/: bankManagment.hpp
includes/customer/: customer.hpp
includes/forms/: mainWindow.h  ui_mainWindow.h
includes/human/: human.hpp
includes/mainLoop/: mainLoop.hpp
includes/provider/: MockProvider.hpp  provider.hpp
includes/providerFactory/: providerFactory.hpp
includes/repository/: mock_repository.hpp  repository.hpp
src/bankManagment/: bankManagment.cpp
src/customer/: customer.cpp
src/forms/: mainWindow.cpp
src/human/: human.cpp
src/main/: main.cpp
src/mainLoop/: mainLoop.cpp
src/provider/: MockProvider.cpp
src/providerFactory/: providerFactory.cpp
src/repository/: mock_repository.cpp
